[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# external
bevy = { version = "0.15.2", default-features = false }
binrw = { version = "0.14.1", default-features = false, features = ["std"] }
crossbeam-channel = { version = "0.5.14", default-features = false, features = ["std"] }
derive_more = { version = "2.0.1", default-features = false, features = ["display", "error"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
pretty-hex = { version = "0.4.1", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.13", default-features = false, features = ["codec"] }

# internal
bevy-tokio = { path = "crates/bevy-tokio" }
dice-codec = { path = "crates/dice-codec" }
dice-proto = { path = "crates/dice-proto" }
dice-server = { path = "crates/dice-server" }
