[package]
name = "dice-server"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy-tokio.workspace = true
crossbeam-channel.workspace = true
dice-codec.workspace = true
dice-proto.workspace = true
futures-util.workspace = true
modular-bitfield = { version = "0.11.2", default-features = false }
tokio.workspace = true
tokio-util.workspace = true
